--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "devDependencies": {
     "typescript": "~5.7.2",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-handlebars": "^2.0.0",
+    "vite-plugin-minify": "^2.1.0",
+    "vite-plugin-purgecss": "^0.2.13"
   },
   "dependencies": {
-    "glob": "^11.0.1"
+    "glob": "^11.0.1",
+    "less": "^4.3.0"
   }
 }
